assets/sass/_custom.sass
// override flex and use grid to layout title and subtitle

.nav_brand
	&.nav_item
	display: grid
	grid-template-areas: "logo title" "logo subtitle"
	grid-column-gap: 0.65em

	img.logo
		max-height: 40px
		grid-area: logo
	.title
		font-size: larger
		font-weight: bold
		grid-area: title
	.subtitle
		grid-area: subtitle
		font-size: smaller
		font-style: italic

.nav
	.nav_body
		justify-content: flex-end
	.follow
		flex: 0

.post_tag.button
	text-transform: none
	font-variant: small-caps
	.button_tally
		margin-left: 1em

a[title="join us"]
  border: solid
  border-radius: 0.5rem


div.subscribe
	font-size: smaller
	margin-top: 2em

.post_meta
		.slides, .recording
			margin-right: 0.5rem
			margin-left: 0.25rem


	

